// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mnemonic > should render the "Mnemonic" component in the authenticate state 1`] = `
<div
  class="dusk-mnemonic"
>
  <div
    class="dusk-mnemonic__actions-wrapper"
  >
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      disabled=""
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.5,7A6.5,6.5 0 0,0 4,13.5A6.5,6.5 0 0,0 10.5,20H14V18H10.5C8,18 6,16 6,13.5C6,11 8,9 10.5,9H16.17L13.09,12.09L14.5,13.5L20,8L14.5,2.5L13.08,3.91L16.17,7H10.5M18,18H16V20H18V18Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Undo
      </span>
      
    </button>
  </div>
   
  <ol
    class="dusk-words"
  >
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
  </ol>
   
  <div
    class="dusk-mnemonic__authenticate-actions-wrapper"
  >
    <input
      class="dusk-textbox dusk-textbox-text"
      maxlength="8"
      placeholder="Enter word 1"
      type="text"
    />
    
     
    
  </div>
</div>
`;

exports[`Mnemonic > should render the "Mnemonic" component in the validate state 1`] = `
<div
  class="dusk-mnemonic"
>
  <div
    class="dusk-mnemonic__actions-wrapper"
  >
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      disabled=""
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.5,7A6.5,6.5 0 0,0 4,13.5A6.5,6.5 0 0,0 10.5,20H14V18H10.5C8,18 6,16 6,13.5C6,11 8,9 10.5,9H16.17L13.09,12.09L14.5,13.5L20,8L14.5,2.5L13.08,3.91L16.17,7H10.5M18,18H16V20H18V18Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Undo
      </span>
      
    </button>
  </div>
   
  <ol
    class="dusk-words"
  >
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
    <li
      class="dusk-words__word"
    >
      _____
    </li>
  </ol>
   
  <div
    class="dusk-mnemonic__validate-actions-wrapper"
  >
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="auction"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        auction
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="tribe"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        tribe
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="type"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        type
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="torch"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        torch
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="domain"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        domain
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="auction"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        auction
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="lyrics"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        lyrics
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="mouse"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        mouse
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="alert"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        alert
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="fabric"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        fabric
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="snake"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        snake
      </span>
    </button>
    
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      data-value="ticket"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        ticket
      </span>
    </button>
    
  </div>
</div>
`;
